--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -16,6 +16,7 @@
   <%= f.input :duration, hint: t(:minutes) %>
   <%= f.input :random_questions %>
   <%= f.input :random_questions_num %>
+  <%= f.input :step_by_step %>
 
 
   <div class="ingredient__actions">
