--- a/app/views/attempt_answers/_form.html.erb
+++ b/app/views/attempt_answers/_form.html.erb
@@ -3,7 +3,33 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
+  <% question = @attempt_answer.question %>
+
   <div class="form-inputs">
+    <div class="">
+      <h3 class="content">
+        <%= question.subject %>
+      </h3>
+      <div>
+        <%= simple_format question.desc %>
+      </div>
+
+      <% options = (@quiz.shuffle_options and !question.fixed_options) ? question.question_options.shuffle : question.question_options %>
+      <% options.each_with_index do |qo, idx| %>
+        <label class="my-2 ml-8 hover:cursor-pointer">
+          <div class="flex items-center">
+            <% if question.single_answer? %>
+              <%= f.radio_button :selected_option, qo.id.to_s, class: "mr-2" %>
+            <% else %>
+              <%= f.check_box :selected_options, { multiple: true, class: "mr-2" }, qo.id.to_s, nil %>
+            <% end %>
+            <span class="mr-2"><%= "ABCDEFGHIJK"[idx] %>.</span>
+
+            <%= qo.content %>
+          </div>
+        </label>
+      <% end %>
+    </div>
   </div>
 
   <div class="form-actions">
