--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -57,6 +57,10 @@
       <th><%= i18n.t :result_viewable %></th>
       <td><%= check @quiz.result_viewable %></td>
     </tr>
+    <tr>
+      <th><%= i18n.t :step_by_step %></th>
+      <td><%= check @quiz.step_by_step %></td>
+    </tr>
     <% if @quiz.on_schedule %>
       <tr>
         <th><%= i18n.t :on_schedule %></th>
