--- a/app/views/attempts/_form_step.html.erb
+++ b/app/views/attempts/_form_step.html.erb
@@ -12,8 +12,8 @@
 
     <% options = (@quiz.shuffle_options and !@question.fixed_options) ? @question.question_options.shuffle : @question.question_options %>
     <% options.each_with_index do |qo, idx| %>
-      <label class="my-2 ml-8 hover:cursor-pointer">
-        <div class="flex items-center">
+      <div class="my-2 ml-8">
+        <label class="inline-flex items-center hover:cursor-pointer">
           <% if @question.single_answer? %>
             <%= f.radio_button :selected_option, qo.id.to_s, checked: f.object.selected_options.try(:"include?", qo.id.to_s), class: "mr-2" %>
           <% else %>
@@ -23,8 +23,8 @@
           <span class="mr-2"><%= "ABCDEFGHIJK"[idx] %>.</span>
 
           <%= qo.content %>
-        </div>
-      </label>
+        </label>
+      </div>
     <% end %>
 
     <div>
